--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
@@ -19,6 +20,9 @@
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
+    "pino": "^9.2.0",
+    "pino-http": "^10.1.0",
+    "pino-pretty": "^11.2.1",
     "redis": "^4.6.14",
     "uuidv4": "^6.2.13"
   }
