adding source and subscription models and adding register user

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,4 @@
 DB_ONLINE=mongodb+srv://nourantareqmohamed:HHvw8soG2oa2mok7@nouranscluster0.4zfzjbg.mongodb.net/newsapp
 DB_LOCAL=mongodb://localhost:27017/newsapp
+ROUND = 8
+JWT_KEY = newsapp
