adding source part in frontend and getting and removing token

--- a/back-end/.env
+++ b/back-end/.env
@@ -2,3 +2,4 @@ DB_ONLINE=mongodb+srv://nourantareqmohamed:HHvw8soG2oa2mok7@nouranscluster0.4zfz
 DB_LOCAL=mongodb://localhost:27017/newsapp
 ROUND = 8
 JWT_KEY = newsapp
+NEWS_API_KEY=e6e8e22f190b4663bf5bc956fcca6469
